--- a/.env
+++ b/.env
@@ -22,6 +22,13 @@ FEEDS__0__CHECK_INTERVAL_MINUTES=60
 FEEDS__0__MAX_POSTS_PER_CHECK=10
 FEEDS__0__ENABLED=true
 
+# AI META Blog configuration
+FEEDS__1__NAME=AI META Blog
+FEEDS__1__URL=https://ai.facebook.com/blog/
+FEEDS__1__CHECK_INTERVAL_MINUTES=60
+FEEDS__1__MAX_POSTS_PER_CHECK=10
+FEEDS__1__ENABLED=true
+
 #######################
 # Browser Configuration
 #######################
