✨ Feature: Individual article content capture
NEW FEATURE: Full article content archival and processing

🎯 Core Features:
- Extract complete article content (text, HTML, images, screenshots)
- Process individual articles discovered from feeds
- Configurable concurrency and safety limits
- Full-page screenshot capture with Playwright
- Rich metadata extraction for each article

🔧 Configuration:
- ArticleProcessingConfig class with granular controls
- Enable/disable full content capture per deployment
- Configurable concurrent article processing limits
- Archival options for HTML, screenshots, raw content
- Future-ready for summarization features

📦 Implementation:
- Enhanced ArticleContent model with screenshot_paths
- process_individual_article() function in feeds/base.py
- Modified main processing loop to capture full articles
- Thread pool integration for CPU-bound content extraction
- Proper error handling and graceful degradation

🚀 Ready for:
- Uber Engineering Blog full content archival
- AI META Blog content capture
- LLM-powered summarization (config toggle ready)
- Advanced embedding generation from full content

System now captures both feed metadata AND complete article
content for comprehensive technical blog monitoring.

--- a/.env
+++ b/.env
@@ -82,6 +82,32 @@ VECTOR_DB__DISTANCE_METRIC=cosine
 VECTOR_DB__BATCH_SIZE=100
 
 #######################
+# Article Processing Configuration
+#######################
+# Control how individual articles are processed after they are discovered in a feed
+
+# Enable/disable full-content capture (render, extract, screenshot)
+ARTICLE_PROCESSING__FULL_CONTENT_CAPTURE=true
+
+# Safety-valve: maximum number of articles to capture per feed per run
+ARTICLE_PROCESSING__MAX_ARTICLES_PER_FEED=50
+
+# Concurrency: how many article pages to process simultaneously
+ARTICLE_PROCESSING__CONCURRENT_ARTICLE_TASKS=5
+
+# --- Optional summarisation (disabled for now) --------------------------- #
+ARTICLE_PROCESSING__GENERATE_SUMMARY=false
+ARTICLE_PROCESSING__SUMMARY_MAX_TOKENS=256
+
+# --- Archival toggles ---------------------------------------------------- #
+ARTICLE_PROCESSING__ARCHIVE_HTML=true
+ARTICLE_PROCESSING__ARCHIVE_SCREENSHOTS=true
+ARTICLE_PROCESSING__ARCHIVE_RAW=false
+
+# Screenshot strategy: full | viewport | none
+ARTICLE_PROCESSING__SCREENSHOT_STRATEGY=full
+
+#######################
 # Scheduler Configuration
 #######################
 SCHEDULER__JOB_STORE_TYPE=memory
