--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "monitor"}]
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.12"
+python = ">=3.12,<3.13"
 httpx = "^0.25.0"
 playwright = "^1.39.0"
 readability-lxml = "^0.8.1"
@@ -50,6 +50,9 @@ pre-commit = "^3.5.0"
 docker = "^6.1.3"
 types-redis = "^4.6.0.7"
 types-requests = "^2.31.0.10"
+bandit = "^1.7.9"
+pip-audit = "^2.7.3"
+freezegun = "^1.5.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -60,14 +63,14 @@ monitor = "monitor.main:main"
 
 [tool.black]
 line-length = 100
-target-version = ["py311"]
+target-version = ["py312"]
 
 [tool.isort]
 profile = "black"
 line_length = 100
 
 [tool.mypy]
-python_version = "3.11"
+python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
@@ -76,10 +79,11 @@ disallow_incomplete_defs = true
 [tool.pytest.ini_options]
 testpaths = ["monitor/tests"]
 asyncio_mode = "auto"
+addopts = "-q --cov=monitor --cov-report=term-missing --cov-fail-under=80"
 
 [tool.ruff]
 line-length = 100
-target-version = "py311"
+target-version = "py312"
 select = ["E", "F", "I", "N", "W", "B"]
 ignore = []
 
