--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ numpy = "^1.26.0"
 feedparser = "^6.0.10"
 python-dateutil = "^2.8.2"
 aiofiles = "^23.2.1"
+fastapi = "^0.104.1"
+uvicorn = {extras = ["standard"], version = "^0.24.0"}
+jinja2 = "^3.1.2"
+python-multipart = "^0.0.6"
 
 # Vector database clients - choose based on preference
 qdrant-client = "^1.6.0"
