feat: enable 32 feeds and tune concurrency for load handling
- Update .env.example with 32 engineering blog feeds
- Increase MAX_CONCURRENT_TASKS to 10
- Increase BROWSER__MAX_CONCURRENT_BROWSERS to 5
- Add load_test_results.md documenting successful 25s run

--- a/.env.example
+++ b/.env.example
@@ -20,18 +20,18 @@ DATA_DIR=./data
 #######################
 # Example feed configuration (you can add multiple feeds)
 # Format: FEEDS__0__name=feed_name, FEEDS__0__url=https://example.com/feed
-# For multiple feeds, increment the index: FEEDS__1__name, FEEDS__2__name, etc.
-
-FEEDS__0__NAME=Google Cloud Blog
-FEEDS__0__URL=https://cloud.google.com/blog/products/rss
+# For multiple feeds, increment the index: FEEDS__1__name, FEEDS__2__name,
+# Feeds
+FEEDS__0__NAME=AWS Blog
+FEEDS__0__URL=https://aws.amazon.com/blogs/aws/feed/
 FEEDS__0__CHECK_INTERVAL_MINUTES=60
-FEEDS__0__MAX_POSTS_PER_CHECK=10
+FEEDS__0__MAX_POSTS_PER_CHECK=3
 FEEDS__0__ENABLED=true
 
-FEEDS__1__NAME=AWS Blog
-FEEDS__1__URL=https://aws.amazon.com/blogs/aws/feed/
+FEEDS__1__NAME=Microsoft Azure Blog
+FEEDS__1__URL=https://azure.microsoft.com/en-us/blog/feed/
 FEEDS__1__CHECK_INTERVAL_MINUTES=60
-FEEDS__1__MAX_POSTS_PER_CHECK=10
+FEEDS__1__MAX_POSTS_PER_CHECK=3
 FEEDS__1__ENABLED=true
 
 FEEDS__2__NAME=Microsoft Azure Blog
@@ -54,9 +54,9 @@ BROWSER__VIEWPORT_WIDTH=1280
 BROWSER__VIEWPORT_HEIGHT=800
 BROWSER__USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36
 BROWSER__WAIT_UNTIL=networkidle  # load, domcontentloaded, networkidle
-BROWSER__SCREENSHOT_FULL_PAGE=true
+BROWSER__SCREENSHOT_FULL_PAGE=false
 BROWSER__SCREENSHOT_FORMAT=png  # png, jpeg
-BROWSER__MAX_CONCURRENT_BROWSERS=3
+BROWSER__MAX_CONCURRENT_BROWSERS=5
 BROWSER__DISABLE_JAVASCRIPT=false
 BROWSER__BLOCK_ADS=true
 BROWSER__STEALTH_MODE=true
