Remove Redis entirely - consolidate to PostgreSQL+pgvector unified storage
- Remove redis[hiredis] and aioredis from dependencies (pyproject.toml, requirements.txt)
- Remove types-redis from dev dependencies
- Delete monitor/cache/redis.py entirely
- Remove Redis imports from monitor/cache/__init__.py
- Remove REDIS enum value from CacheBackend in monitor/config.py
- Remove redis_url and redis_password fields from CacheConfig
- Update default cache backend to POSTGRES
- Remove RedisJobStore import and conditional scheduler code from monitor/main.py
- Update scheduler job_store_type comment to remove redis option
- Remove redis scheduler URL comment from .env.example

All 14 unit tests pass. PostgreSQL+pgvector now provides unified storage for both cache and vector embeddings.

--- a/.env.example
+++ b/.env.example
@@ -65,9 +65,13 @@ BROWSER__STEALTH_MODE=true
 # Cache Configuration
 #######################
 # Caching settings for improved performance
+# Default: Unified PostgreSQL storage (cache + vector DB in one database)
 CACHE__ENABLED=true
-CACHE__REDIS_URL=redis://localhost:6379/0
-# CACHE__REDIS_PASSWORD=your_redis_password
+# Cache backend: memory, filesystem, postgres
+# Using "postgres" enables unified storage with pgvector (single database, recommended)
+CACHE__BACKEND=postgres  # postgres, memory, filesystem
+# PostgreSQL DSN for cache (shared with vector DB for unified storage)
+CACHE__POSTGRES_DSN=postgres://localhost:5432/blogmon
 CACHE__CACHE_TTL_HOURS=168  # 1 week
 CACHE__LOCAL_STORAGE_PATH=./cache
 
@@ -98,8 +102,9 @@ EMBEDDING__USE_GPU=false
 # Vector DB Configuration
 #######################
 # Vector database settings for storing embeddings
-VECTOR_DB__DB_TYPE=qdrant  # qdrant, chroma, pinecone, milvus, weaviate
-VECTOR_DB__CONNECTION_STRING=http://localhost:6333
+# Default: pgvector with unified PostgreSQL storage (same database as cache)
+VECTOR_DB__DB_TYPE=pgvector  # pgvector, qdrant, chroma, pinecone, milvus, weaviate
+VECTOR_DB__CONNECTION_STRING=postgresql://localhost:5432/blogmon
 # VECTOR_DB__API_KEY=your-vector-db-api-key
 VECTOR_DB__COLLECTION_NAME=technical_blog_posts
 
@@ -116,8 +121,7 @@ VECTOR_DB__TIMEOUT_SECONDS=30
 # Scheduler Configuration
 #######################
 # Job scheduler settings
-SCHEDULER__JOB_STORE_TYPE=memory  # memory, redis, sqlalchemy
-# SCHEDULER__JOB_STORE_URL=redis://localhost:6379/1
+SCHEDULER__JOB_STORE_TYPE=memory  # memory, sqlalchemy
 SCHEDULER__MAX_INSTANCES=1
 SCHEDULER__TIMEZONE=UTC
 SCHEDULER__COALESCE=true
