docs: update configuration and documentation for MRL embeddings and LLM summaries
- Updated .env.example to reflect Ollama + Qwen3-8B with 1920-dim MRL truncation
- Added LLM configuration section for article summarization
- Added article processing configuration options
- Updated AGENTS.md with uv commands and current Ollama/pgvector setup
- Updated TODO.md to mark MRL and summarization features as completed
- Added pgvector 2000-dim limit documentation with MRL solution

--- a/.env.example
+++ b/.env.example
@@ -79,17 +79,19 @@ CACHE__LOCAL_STORAGE_PATH=./cache
 # Embedding Configuration
 #######################
 # Text and image embedding model settings
-EMBEDDING__TEXT_MODEL_TYPE=openai  # openai, huggingface, sentence_transformers, custom
-EMBEDDING__TEXT_MODEL_NAME=text-embedding-ada-002
-EMBEDDING__IMAGE_MODEL_TYPE=openai  # Leave empty to disable image embeddings
-EMBEDDING__IMAGE_MODEL_NAME=clip
+EMBEDDING__TEXT_MODEL_TYPE=ollama  # openai, huggingface, sentence_transformers, ollama, custom
+EMBEDDING__TEXT_MODEL_NAME=hf.co/JonathanMiddleton/Qwen3-Embedding-8B-GGUF:BF16
+EMBEDDING__IMAGE_MODEL_TYPE=  # Leave empty to disable image embeddings
+EMBEDDING__IMAGE_MODEL_NAME=
 
 # API credentials (required for respective services)
-EMBEDDING__OPENAI_API_KEY=sk-your-openai-api-key
+# EMBEDDING__OPENAI_API_KEY=sk-your-openai-api-key
 # EMBEDDING__HUGGINGFACE_API_KEY=your-huggingface-api-key
 
 # Model parameters
-EMBEDDING__EMBEDDING_DIMENSIONS=1536  # Dimensions depend on the model
+# For MRL (Matryoshka Representation Learning) truncation: set to desired dimension
+# Full Qwen3-8B outputs 4096 dims, but can be truncated via MRL to 1920, 1536, 1024, etc.
+EMBEDDING__EMBEDDING_DIMENSIONS=1920  # MRL allows truncation to reduce storage
 EMBEDDING__BATCH_SIZE=8
 EMBEDDING__MAX_RETRIES=3
 EMBEDDING__TIMEOUT_SECONDS=30
@@ -109,13 +111,39 @@ VECTOR_DB__CONNECTION_STRING=postgresql://localhost:5432/blogmon
 VECTOR_DB__COLLECTION_NAME=technical_blog_posts
 
 # Schema configuration
-VECTOR_DB__TEXT_VECTOR_DIMENSION=1536  # Should match embedding dimensions
+# IMPORTANT: VECTOR_DB__TEXT_VECTOR_DIMENSION must match EMBEDDING__EMBEDDING_DIMENSIONS
+# pgvector has a hard limit of 2000 dimensions, so use MRL truncation for larger models
+VECTOR_DB__TEXT_VECTOR_DIMENSION=1920  # Should match EMBEDDING__EMBEDDING_DIMENSIONS
 VECTOR_DB__IMAGE_VECTOR_DIMENSION=512  # For image embeddings if used
 VECTOR_DB__DISTANCE_METRIC=cosine  # cosine, euclidean, dot
 
 # Performance settings
 VECTOR_DB__BATCH_SIZE=100
 VECTOR_DB__TIMEOUT_SECONDS=30
+
+#######################
+# LLM Configuration
+#######################
+# LLM settings for article summarization
+LLM__PROVIDER=ollama  # openai, ollama, custom
+LLM__MODEL_NAME=hf.co/unsloth/Olmo-3-7B-Instruct-GGUF:BF16
+# LLM__API_KEY=your-openai-api-key  # Only required for OpenAI provider
+# LLM__BASE_URL=http://localhost:11434  # Ollama endpoint (uses default if omitted)
+LLM__TIMEOUT_SECONDS=300  # Increase for slower local models
+LLM__TEMPERATURE=0.7
+LLM__MAX_TOKENS=1024
+
+#######################
+# Article Processing
+#######################
+# Controls how articles are processed after discovery
+ARTICLE_PROCESSING__FULL_CONTENT_CAPTURE=true  # Visit URL and render full content
+ARTICLE_PROCESSING__GENERATE_SUMMARY=true  # Use LLM to generate article summaries
+ARTICLE_PROCESSING__ARCHIVE_HTML=true  # Store cleaned HTML for archival
+ARTICLE_PROCESSING__ARCHIVE_SCREENSHOTS=false  # Store Playwright screenshots (uses disk space)
+ARTICLE_PROCESSING__MAX_ARTICLES_PER_FEED=50  # Safety valve to prevent runaway processing
+ARTICLE_PROCESSING__CONCURRENT_ARTICLE_TASKS=5  # Parallel processing limit
+ARTICLE_PROCESSING__SUMMARY_MAX_TOKENS=256  # Max tokens for LLM-generated summaries
 
 #######################
 # Scheduler Configuration
