--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "torch>=2.5.0",
     "asyncpg>=0.29.0",
     "pgvector>=0.4.0",
+    "brotli>=1.2.0",
 ]
 
 [project.scripts]
