--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "httpx>=0.27.0",
     "playwright>=1.48.0",
     "readability-lxml>=0.8.1",
-    "beautifulsoup4>=4.12.3",
+    "justhtml>=0.10.0",
     "pydantic>=2.9.0",
     "pydantic-settings>=2.6.0",
     "apscheduler>=3.10.4",
