--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "playwright>=1.48.0",
     "readability-lxml>=0.8.1",
     "justhtml>=0.10.0",
+    "beautifulsoup4>=4.14.0",
     "pydantic>=2.9.0",
     "pydantic-settings>=2.6.0",
     "apscheduler>=3.10.4",
@@ -35,6 +36,7 @@ dependencies = [
     "asyncpg>=0.29.0",
     "pgvector>=0.4.0",
     "brotli>=1.2.0",
+    "cloudscraper>=1.2.71",
 ]
 
 [project.scripts]
