--- a/.env.example
+++ b/.env.example
@@ -174,3 +174,8 @@ MAX_CONCURRENT_TASKS=10
 REQUEST_TIMEOUT_SECONDS=30
 BACKOFF_MAX_RETRIES=5
 BACKOFF_MAX_TIME=60  # seconds
+
+# Grafana Configuration
+GRAFANA_URL=http://localhost:3001
+GRAFANA_USER=admin
+GRAFANA_PASSWORD=admin
