--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U blogmon -d blogmon"]
+      test: [ "CMD-SHELL", "pg_isready -U blogmon -d blogmon" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -47,29 +47,15 @@ services:
       EMBEDDING__USE_GPU: "false"
 
       # Feed configuration
-      FEEDS__0__NAME: AWS Blog
-      FEEDS__0__URL: https://aws.amazon.com/blogs/aws/feed/
-      FEEDS__0__CHECK_INTERVAL_MINUTES: "60"
-      FEEDS__0__MAX_POSTS_PER_CHECK: "10"
+      # Feed configuration is loaded from .env file
       FEEDS__0__ENABLED: "true"
-
-      FEEDS__1__NAME: Azure Blog
-      FEEDS__1__URL: https://azure.microsoft.com/en-us/blog/feed/
-      FEEDS__1__CHECK_INTERVAL_MINUTES: "60"
-      FEEDS__1__MAX_POSTS_PER_CHECK: "10"
-      FEEDS__1__ENABLED: "true"
-
-      FEEDS__2__NAME: GitHub Blog
-      FEEDS__2__URL: https://github.blog/feed
-      FEEDS__2__CHECK_INTERVAL_MINUTES: "60"
-      FEEDS__2__MAX_POSTS_PER_CHECK: "10"
-      FEEDS__2__ENABLED: "true"
 
       # Browser configuration
       BROWSER__MAX_CONCURRENT_BROWSERS: "2"
       BROWSER__TIMEOUT_SECONDS: "30"
       BROWSER__HEADLESS: "true"
       BROWSER__BLOCK_ADS: "true"
+      PLAYWRIGHT_BROWSERS_PATH: "/app/browsers"
 
       # Article processing
       ARTICLE_PROCESSING__FULL_CONTENT_CAPTURE: "true"
@@ -80,27 +66,47 @@ services:
 
       # Logging
       METRICS__LOG_LEVEL: INFO
+
       METRICS__STRUCTURED_LOGGING: "true"
+      METRICS__PROMETHEUS_ENABLED: "true"
+      METRICS__PROMETHEUS_PORT: "8000"
 
     volumes:
       - ./data:/app/data
       - ./cache:/app/cache
     ports:
-      - "8080:8080"  # Web dashboard (if enabled)
+      - "8080:8080" # Web dashboard (if enabled)
     networks:
       - blogmon-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "from monitor.config import load_settings; load_settings()"]
+      test: [ "CMD", "python", "-c", "from monitor.config import load_settings; load_settings()" ]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 60s
 
+  # Prometheus for metrics collection
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: blogmon-prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    ports:
+      - "9091:9090"
+    networks:
+      - blogmon-network
+      - shared-network
+
 volumes:
+  prometheus_data:
+
   postgres_data:
     driver: local
 
 networks:
   blogmon-network:
     driver: bridge
+  shared-network:
+    external: true
